Update homepage index and add Bilim Tarihi 2025 notes

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 
 <h4>Bilim Tarihi</h4>
 <ul>
+    <li> 2025:
+        <a href="files/bilim_tarihi_2025_I.html">Ders 1-6 notları</a>,
     <li> 2023:
         <a href="files/bilim_tarihi_2023.html">Rönesans Öncesi Bilim Tarihi Ders notları</a>,
         <a href="files/bilim_tarihi_sizin_sorular_2023.html">Sizin Sorularınız</a>.
